  * Make JniException a runtime exception, so that there is no need to
    declare the fact that you may encounter such a beast. I guess that
    nobody will ever want to survive such error.
 SimDag:
  * Kill the useless "rate" argument of SD_task_get_execution_time()
    Everyone used to provide -1 as a value, it was not used, and the
    semantic of a possible use wasn't even clear.
 MSG: 
  * In trace replay, allow to have one trace file per process.
    Give the specific trace file as argument of each process, 
      and call MSG_action_trace_run(NULL)
    You can still have one merged file for each processes.
  * Kill the MSG_paje_output() function. It's a noop since 2 years.
      
 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>


SimGrid (3.3.4) stable; urgency=low

 The "Desktop Grid needs love too" release (also called Xmas release).

 Models improvements:
 * Major speedup in the maxmin system solving by using lazy evaluation
   Instead of solving completely the maxmin system at each iteration, 
     only invalidate (and recompute) the modified parts. 
   This new feature is enabled in default models but you can try to
     turn it on with "--cfg:maxmin-selective-update=1" for other models.
 * Cas01 IMproved as default CPU model
   This CPU model is the same Cas01 model, but it uses the
     maxmin-selective-update flag and a heap structure to manage
     actions on SURF kernel. 
   It reduces the complexity to find the next action to finish and,
     consequently, it's faster than the old Cas01.
   This is the new default CPU model (Cas01).   
 * Rename the old Cas01 model to Cas01_fullupdate
   Keep the old cpu model Cas01 with the new name of Cas01_fullupdate.
   Use "--cfg=cpu_model:Cas01_fullupdate" to use the old default CPU model.
 * CpuTI (CPU Trace Integration)
   A new CPU model whose objective is simulate faster when using
     availability trace files. 
   Instead of using a full featured, over engineered maxmin system for